--- a/resume.tex
+++ b/resume.tex
@@ -56,8 +56,16 @@ To obtain a Summer 2017 Internship in Software Engineering.
 
 \section{Skills}
 % http://tex.stackexchange.com/questions/95045/how-to-prevent-breaklines-inside-cvcomputer-in-moderncv
-\cvitem{Languages}{C++, Java, R, Mathematica, Javascript, PHP, C\#, Python, \LaTeX, Haskell}
-\cvitem{Software}{NodeJS, CMake, Git, Linux, ASP.NET MVC, Flask}
+\cvitem{Languages}{
+\BLOCK{ for language in languages }
+    \VAR{language},
+\BLOCK{ endfor }
+}
+\cvitem{Software}{
+\BLOCK{ for s in software }
+    \VAR{s},
+\BLOCK{ endfor }
+}
 \cvline{Passed Actuarial Exam P}{Scored 6/10}
 
 \vspace*{-1\baselineskip}
