--- a/templates/cv.template.tex
+++ b/templates/cv.template.tex
@@ -140,6 +140,7 @@
 \cvline{Texas A\&M President's Endowed Scholar}{(2014 - 2018)}
 \cvline{HackDFW}{(2016) Won Ilumi SmartBulb prize by developing Android app which provided light therapy for different medical conditions by automatically controlling light color and intensity.}
 \cvline{Capital One Summit for Developing  Leaders}{(2015)}
+\cvline{Texas A\&M Integral Bee Winner}{(2015)}
 
 
 %%%%%%%%%%%%%%%
