--- a/templates/cv.template.tex
+++ b/templates/cv.template.tex
@@ -15,7 +15,7 @@
 \address{\VAR{about['address']['street']}}{\VAR{['address']['city']}}
 \mobile{\VAR{about['mobile']}}
 \email{\VAR{about['email']}}
-\homepage{\VAR{about['homepage']}}
+\homepage{\VAR{about['website']}}
 \social[github]{\VAR{about['github']['profile']}}
 \social[linkedin]{\VAR{about['linkedin']['profile']}}
 
@@ -49,7 +49,7 @@
 \section{Computer Skills}
 \cvitem{Languages}{\VAR{", ".join(languages)}}
 \cvitem{Software}{\VAR{", ".join(software)}}
-{#\cvline{Passed Actuarial Exam P}{Scored 6/10}#}
+\cvline{Passed Actuarial Exam P}{Scored 6/10}
 
 
 %%%%%%%%%%%%%%%%%%%%%%%
@@ -61,6 +61,7 @@
 \cventry{Fall 2016 - Present}{Undergraduate Research Assistant}{Department of Computer Science}{Texas A\&M University}{}{
     \begin{itemize}
         \item Research parametrized algorithms for hard problems.
+        \item Research faster algorithm for the Line-Cover Problem.
     \end{itemize}
 }
 \cventry{Summer 2016}{Undergraduate Research Assistant}{Department of Mathematics}{Texas A\&M University}{}{
