--- a/templates/resume.template.tex
+++ b/templates/resume.template.tex
@@ -17,7 +17,7 @@ http://tex.stackexchange.com/a/68797/89290
 \address{\VAR{about['address']['street']}}{\VAR{['address']['city']}}
 \mobile{\VAR{about['mobile']}}
 \email{\VAR{about['email']}}
-\homepage{\VAR{about['homepage']}}
+\homepage{\VAR{about['website']}}
 \social[github]{\VAR{about['github']['profile']}}
 
 \begin{document}
@@ -60,7 +60,6 @@ To obtain a Summer 2017 Internship in Software Engineering.
 {# http://tex.stackexchange.com/questions/95045/how-to-prevent-breaklines-inside-cvcomputer-in-moderncv #}
 \cvitem{Languages}{\VAR{", ".join(languages)}}
 \cvitem{Software}{\VAR{", ".join(software)}}
-\cvline{Passed Actuarial Exam P}{Scored 6/10}
 
 \vspace*{-1\baselineskip}
 
@@ -81,6 +80,7 @@ To obtain a Summer 2017 Internship in Software Engineering.
 \cventry{2016 - Present}{Research Assistant}{Department of Computer Science}{Texas A\&M University}{}{
     \begin{itemize}
         \item Research parametrized algorithms for hard problems.
+        \item Research faster algorithm for the Line-Cover Problem.
     \end{itemize}
 }
 \cventry{2015 - Present}{Research Assistant}{Department of Mathematics}{Texas A\&M University}{}{
