--- a/templates/resume.template.tex
+++ b/templates/resume.template.tex
@@ -139,11 +139,10 @@ To obtain a Summer 2017 Internship in Software Engineering.
 
 \section{Honors and Awards}
 
-{# \cvline{Pi Mu Epsilon (Math Honor Society)}{(2015-2016)---Elected Webmaster} #}
+{# \cvline{Pi Mu Epsilon (Math Honor Society)}{(2015-2016) Elected Webmaster} #}
 \cvline{National Merit Scholar}{(2014 - 2018)}
 \cvline{Texas A\&M President's Endowed Scholar}{(2014 - 2018)}
 \cvline{HackDFW}{(2016) Won Ilumi SmartBulb prize by developing Android app which provided light therapy for different medical conditions by automatically controlling light color and intensity.}
-{# \cvline{Math Fest}{(2015) Selected by honors faculty to attend national math conference.}\cvline{Capital One Summit for Developing  Leaders}{(2015)} #}
 
 
 \end{document}
