--- a/templates/cv.template.tex
+++ b/templates/cv.template.tex
@@ -139,7 +139,7 @@
 
 \section{Honors and Awards}
 
-\cvline{Pi Mu Epsilon (Math Honor Society)}{(2015-2016)---Elected Webmaster}
+\cvline{Pi Mu Epsilon (Math Honor Society)}{(2015-2016) Elected Webmaster}
 \cvline{National Merit Scholar}{(2014 - 2018)}
 \cvline{Texas A\&M President's Endowed Scholar}{(2014 - 2018)}
 \cvline{HackDFW}{(2016) Won Ilumi SmartBulb prize by developing Android app which provided light therapy for different medical conditions by automatically controlling light color and intensity.}
