--- a/templates/cv.template.tex
+++ b/templates/cv.template.tex
@@ -143,8 +143,8 @@
 \cvline{National Merit Scholar}{(2014 - 2018)}
 \cvline{Texas A\&M President's Endowed Scholar}{(2014 - 2018)}
 \cvline{HackDFW}{(2016) Won Ilumi SmartBulb prize by developing Android app which provided light therapy for different medical conditions by automatically controlling light color and intensity.}
-\cvline{Capital One Summit for Developing  Leaders}{(2015)}
-\cvline{Texas A\&M Integral Bee Winner}{(2015)}
+\cvline{Capital One Summit for Developing  Leaders}{(2015) One of 29 freshmen and sophomores selected nationally to attend training seminars, and work case studies, leveraging problem-solving skills}
+\cvline{Texas A\&M Integral Bee Winner}{(2015) Beat 50 other students in a timed integral-solving contest, and won a free copy of Maple.}
 
 
 %%%%%%%%%%%%%%%
