--- a/templates/cv.template.tex
+++ b/templates/cv.template.tex
@@ -156,4 +156,13 @@
 \cvline{Math Fest}{(2015) One of two students selected by honors faculty to attend national math conference.}
 
 
+%%%%%%%%%%%%%%%%
+% PUBLICATIONS %
+%%%%%%%%%%%%%%%%
+
+{# http://www.ctan.org/tex-archive/macros/latex/contrib/moderncv/examples #}
+\nocite{*}
+\bibliographystyle{plain}
+\bibliography{data/pub.bib}
+
 \end{document}
