--- a/data/pub.bib
+++ b/data/pub.bib
@@ -7,3 +7,11 @@
 	year={2016},
 	journal={In writing}
 }
+
+@article{polyroot,
+	title={Finding Roots of Polynomials},
+	author={Matt Gaikema},
+	year={2016},
+	journal={In writing},
+	url={https://github.com/TexAgg/PolyRoot}
+}
