--- a/templates/cv.template.tex
+++ b/templates/cv.template.tex
@@ -32,7 +32,7 @@
 \cventry{2014 - 2018}{Bachelor of Science in \textbf{Computer Science} and \textbf{Applied Mathematics}}
 {Texas A\&M University}
 {College Station, Texas}
-{3.75/4.0}
+{3.758/4.0}
 {University Honors Fellow}
 \cvitem{Courses}{
     \begin{multicols}{2}
@@ -139,9 +139,9 @@
 
 \section{Honors and Awards}
 
-\cvline{Pi Mu Epsilon (Math Honor Society)}{(2015-2016) Elected Webmaster}
-\cvline{National Merit Scholar}{(2014 - 2018)}
-\cvline{Texas A\&M President's Endowed Scholar}{(2014 - 2018)}
+\cvline{Pi Mu Epsilon (Math Honor Society)}{(2015-2016) Elected Webmaster.}
+\cvline{National Merit Scholar}{(2014 - 2018) Scored top 1\% of the nation on the PSAT/NMSQT.}
+\cvline{Texas A\&M President's Endowed Scholar}{(2014 - 2018) Recognized and awarded a scholarship by Texas A\&M for being a National Merit Scholar.}
 \cvline{HackDFW}{(2016) Won Ilumi SmartBulb prize by developing Android app which provided light therapy for different medical conditions by automatically controlling light color and intensity.}
 \cvline{Capital One Summit for Developing  Leaders}{(2015) One of 29 freshmen and sophomores selected nationally to attend training seminars, and work case studies, leveraging problem-solving skills}
 \cvline{Texas A\&M Integral Bee Winner}{(2015) Beat 50 other students in a timed integral-solving contest, and won a free copy of Maple.}
