Comment out polyroot

--- a/data/pub.bib
+++ b/data/pub.bib
@@ -8,7 +8,7 @@
 	journal={In writing}
 }
 
-@article{polyroot,
+article{polyroot,
 	title={Finding Roots of Polynomials},
 	author={Matt Gaikema},
 	year={2016},
