--- a/templates/cv.template.tex
+++ b/templates/cv.template.tex
@@ -64,7 +64,7 @@
 \cventry{Fall 2016 - Present}{Undergraduate Research Assistant}{Department of Computer Science}{Texas A\&M University}{}{
     \begin{itemize}
         \item Research parametrized algorithms for hard problems.
-        \item Research faster algorithm for the Line-Cover Problem.
+        \item Research approximation algorithms for the Line-Cover Problem.
     \end{itemize}
 }
 \cventry{Summer 2016}{Undergraduate Research Assistant}{Department of Mathematics}{Texas A\&M University}{}{
