--- a/templates/resume.template.tex
+++ b/templates/resume.template.tex
@@ -77,13 +77,13 @@ To obtain a Summer 2017 Internship in Software Engineering.
         \item Selected to lead weekly review lessons on discrete mathematics.
     \end{itemize}
 }
-\cventry{2016 - Present}{Research Assistant}{Department of Computer Science}{Texas A\&M University}{}{
+\cventry{2016 - Present}{Undergraduate Research Assistant}{Department of Computer Science}{Texas A\&M University}{}{
     \begin{itemize}
         \item Research parametrized algorithms for hard problems.
-        \item Research faster algorithm for the Line-Cover Problem.
+        \item Research approximation algorithms for the Line-Cover Problem.
     \end{itemize}
 }
-\cventry{2015 - Present}{Research Assistant}{Department of Mathematics}{Texas A\&M University}{}{
+\cventry{2015 - Present}{Undergraduate Research Assistant}{Department of Mathematics}{Texas A\&M University}{}{
     \begin{itemize}
         \item Analyzed sound quality of vinyls from before and after RIAA standardization to improve sound quality in old recordings (2015).
         \item Discovered formula determining the total number of different transposition decompositions of a permutation cycle (2016).
