Update PT this semester

--- a/templates/resume.template.tex
+++ b/templates/resume.template.tex
@@ -72,8 +72,8 @@ To obtain a Summer 2017 Internship in Software Engineering.
 
 \cventry{2016 - Present}{Peer Teacher}{Department of Computer Science}{Texas A\&M University}{}{
     \begin{itemize}
-        \item Support six professors in their course load by mentoring and tutoring hundreds of students in computer science.
-        \item Assist students one-on-one with debugging and analyzing their C++ programs in office hours.
+        \item Support six professors in their course load by mentoring and tutoring hundreds of students in computer science courses.
+        \item Assist students one-on-one with debugging and analyzing their C++, Java, and Haskell programs in office hours.
         \item Selected to lead weekly review lessons on discrete mathematics.
     \end{itemize}
 }
