--- a/templates/cv.template.tex
+++ b/templates/cv.template.tex
@@ -95,7 +95,7 @@
 		\item Selected to lead weekly review lessons on discrete mathematics.
 	\end{itemize}
 }
-\cventry{2015 - Present}{Student Assistant}{Department of Mathematics}{Texas A\&M University}{}
+\cventry{2015 - 2016}{Student Assistant}{Department of Mathematics}{Texas A\&M University}{}
 {
 	\begin{itemize}
 		\item Graded homework and exams for multivariate calculus class of over 90 students.
