--- a/templates/resume.template.tex
+++ b/templates/resume.template.tex
@@ -83,14 +83,14 @@ To obtain a Summer 2017 Internship in Software Engineering.
         \item Research approximation algorithms for the Line-Cover Problem.
     \end{itemize}
 }
-\cventry{2015 - Present}{Undergraduate Research Assistant}{Department of Mathematics}{Texas A\&M University}{}{
+\cventry{2015 - 2016}{Undergraduate Research Assistant}{Department of Mathematics}{Texas A\&M University}{}{
     \begin{itemize}
         \item Analyzed sound quality of vinyls from before and after RIAA standardization to improve sound quality in old recordings (2015).
         \item Discovered formula determining the total number of different transposition decompositions of a permutation cycle (2016).
         \item Developed a program to compute the entries and eigensystem of the integer partition matrix.
     \end{itemize}
 }
-\cventry{2015 - Present}{Student Assistant}{Department of Mathematics}{Texas A\&M University}{}
+\cventry{2015 - 2016}{Student Assistant}{Department of Mathematics}{Texas A\&M University}{}
 {
     \begin{itemize}
         \item Graded homework and exams for multivariate calculus class of over 90 students.
