--- a/templates/cv.template.tex
+++ b/templates/cv.template.tex
@@ -8,6 +8,7 @@
 \documentclass[10pt,a4paper]{moderncv}
 \usepackage[utf8]{inputenc}
 \usepackage{multicol}
+\usepackage[scale=0.75]{geometry}
 {# List of themes: http://tex.stackexchange.com/a/44222/89290 #}
 \moderncvtheme[black]{casual}
 
@@ -35,7 +36,7 @@
 {\VAR{gpa}/4.0}
 {University Honors Fellow}
 \cvitem{Courses}{
-	\begin{multicols}{2}
+	\begin{multicols}{3}
 	\begin{small}
 	\begin{itemize}
 	\BLOCK{for course in courses}
@@ -126,12 +127,14 @@
 		\item Key member of the development team for the original website.
 	\end{itemize}
 }
+{#
 \cventry{Summer 2014}{Participant}{Champe-Fitzhugh International Honors Leadership Seminar}{}{}{
 	\begin{itemize}
 		\item Selected as part of a competitive process to be one of 30 incoming Texas A\&M student participants.
 		\item Traveled throughout Italy and attended lectures and tours on Italian art, architecture, and culture.
 	\end{itemize}
 }
+#}
 
 
 
@@ -145,17 +148,6 @@
 \cvline{National Merit Scholar}{(2014 - 2018) Scored top 1\% of the nation on the PSAT/NMSQT.}
 \cvline{Texas A\&M President's Endowed Scholar}{(2014 - 2018) Recognized and awarded a scholarship by Texas A\&M for being a National Merit Scholar.}
 \cvline{HackDFW}{(2016) Won Ilumi SmartBulb prize by developing Android app which provided light therapy for different medical conditions by automatically controlling light color and intensity.}
-\cvline{Capital One Summit for Developing  Leaders}{(2015) One of 29 freshmen and sophomores selected nationally to attend training seminars, and work case studies, leveraging problem-solving skills}
-\cvline{Texas A\&M Integral Bee Winner}{(2015) Beat 50 other students in a timed integral-solving contest, and won a free copy of Maple.}
-
-
-%%%%%%%%%%%%%%%
-% CONFERENCES %
-%%%%%%%%%%%%%%%
-
-\section{Conferences}
-
-\cvline{Math Fest}{(2015) One of two students selected by honors faculty to attend national math conference.}
 
 
 %%%%%%%%%%%%%%%%
@@ -166,5 +158,6 @@
 \nocite{*}
 \bibliographystyle{plain}
 \bibliography{data/pub.bib}
+
 
 \end{document}
