--- a/templates/cv.template.tex
+++ b/templates/cv.template.tex
@@ -21,6 +21,15 @@
 \social[github]{\VAR{about['github']['profile']}}
 \social[linkedin]{\VAR{about['linkedin']['profile']}}
 
+% PDF metadata
+% http://tex.stackexchange.com/q/26529/89290
+% http://tex.stackexchange.com/a/79406/89290
+\AfterPreamble{\hypersetup{
+  pdfauthor={Matt Gaikema},
+  pdftitle={Matt Gaikema CV},
+  pdfsubject={CV for Matt Gaikema}
+}}
+
 \begin{document}
 \makecvtitle
 
