--- a/templates/resume.template.tex
+++ b/templates/resume.template.tex
@@ -20,6 +20,15 @@ http://tex.stackexchange.com/a/68797/89290
 \homepage{\VAR{about['website']}}
 \social[github]{\VAR{about['github']['profile']}}
 
+% PDF metadata
+% http://tex.stackexchange.com/q/26529/89290
+% http://tex.stackexchange.com/a/79406/89290
+\AfterPreamble{\hypersetup{
+  pdfauthor={Matt Gaikema},
+  pdftitle={Matt Gaikema Resume},
+  pdfsubject={Resume for Matt Gaikema}
+}}
+
 \begin{document}
 \vspace*{-2\baselineskip}
 \makecvtitle
