--- a/data/pub.bib
+++ b/data/pub.bib
@@ -1,11 +1,21 @@
 // http://academia.stackexchange.com/a/13002
 // https://www.sharelatex.com/learn/Bibliography_management_with_biblatex
 
-@article{trans,
-	title={EXPANSION OF PERMUTATIONS AS PRODUCTS OF TRANSPOSITIONS},
-	author={Micheal Anshelevich and Matthew Gaikema and Madeline Hansalik and Songyu He and Nathan Mehlop},
-	year={2016},
-	journal={In writing}
+
+https://arxiv.org/abs/1702.06093
+@ARTICLE{2017arXiv170206093A,
+	author = {{Anshelevich}, M. and {Gaikema}, M. and {Hansalik}, M. and {He}, S. and 
+	{Mehlhop}, N.},
+	title = "{Expansion of permutations as products of transpositions}",
+	journal = {ArXiv e-prints},
+	archivePrefix = "arXiv",
+	eprint = {1702.06093},
+	primaryClass = "math.CO",
+	keywords = {Mathematics - Combinatorics, Primary 05A05, Secondary 05E10, 20C30},
+		year = 2017,
+	month = feb,
+	adsurl = {http://adsabs.harvard.edu/abs/2017arXiv170206093A},
+	adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
 article{polyroot,
