add publication to resume

--- a/templates/resume.template.tex
+++ b/templates/resume.template.tex
@@ -90,12 +90,13 @@ To obtain a Summer 2017 Internship in Software Engineering.
     \begin{itemize}
         \item Research parametrized algorithms for hard problems.
         \item Research approximation algorithms for the Line-Cover Problem.
+        \item Attend weekly meetings with graduate students and professors to discuss research and complexity theory.
     \end{itemize}
 }
 \cventry{2015 - 2016}{Undergraduate Research Assistant}{Department of Mathematics}{Texas A\&M University}{}{
     \begin{itemize}
         \item Analyzed sound quality of vinyls from before and after RIAA standardization to improve sound quality in old recordings (2015).
-        \item Discovered formula determining the total number of different transposition decompositions of a permutation cycle (2016).
+        \item Published a \href{https://arxiv.org/abs/1702.06093}{paper} describing a formula to determine the total number of different transposition decompositions of a permutation cycle (2016).
         \item Developed a program to compute the entries and eigensystem of the integer partition matrix.
     \end{itemize}
 }
@@ -130,12 +131,6 @@ To obtain a Summer 2017 Internship in Software Engineering.
 \cventry{2016 - Present}{Web Developer}{Aggie Coding Club}{}{}{
     \begin{itemize}
         \item Key member of the development team for the original website.
-    \end{itemize}
-}
-\cventry{Summer 2014}{Participant}{Champe-Fitzhugh International Honors Leadership Seminar}{}{}{
-    \begin{itemize}
-        \item Selected as part of a competitive process to be one of 30 incoming Texas A\&M student participants.
-        \item Traveled throughout Italy and attended lectures and tours on Italian art, architecture, and culture.
     \end{itemize}
 }
 
