add linkedin profile to resume

--- a/templates/resume.template.tex
+++ b/templates/resume.template.tex
@@ -19,6 +19,7 @@ http://tex.stackexchange.com/a/68797/89290
 \email{\VAR{about['email']}}
 \homepage{\VAR{about['website']}}
 \social[github]{\VAR{about['github']['profile']}}
+\social[linkedin]{\VAR{about['linkedin']['profile']}}
 
 % PDF metadata
 % http://tex.stackexchange.com/q/26529/89290
