add internship skeleton

--- a/templates/resume.template.tex
+++ b/templates/resume.template.tex
@@ -37,17 +37,6 @@ http://tex.stackexchange.com/a/68797/89290
 
 
 %%%%%%%%%%%%%
-% OBJECTIVE %
-%%%%%%%%%%%%%
-
-\section{Objective}
-
-To obtain a Summer 2017 Internship in Software Engineering.
-
-\vspace*{-1\baselineskip}
-
-
-%%%%%%%%%%%%%
 % EDUCATION %
 %%%%%%%%%%%%%
 
@@ -80,7 +69,10 @@ To obtain a Summer 2017 Internship in Software Engineering.
 
 \section{Work Experience}
 
-\cventry{2016 - Present}{Peer Teacher}{Department of Computer Science}{Texas A\&M University}{}{
+\cventry{Summer 2017}{Software Engineering Intern}{WePay}{California}{}{
+}
+
+\cventry{2016 - 2017}{Peer Teacher}{Department of Computer Science}{Texas A\&M University}{}{
     \begin{itemize}
         \item Support six professors in their course load by mentoring and tutoring hundreds of students in computer science courses.
         \item Assist students one-on-one with debugging and analyzing their C++, Java, and Haskell programs in office hours.
